# src/app/api/models/hex-coord-dto.ts
@@ -1,0 +1,8 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface HexCoordDto {
+  q: number;
+  r: number;
+  s?: number;
+}
