# src/app/api/models/stellar-object.ts
@@ -1,7 +1,9 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { HexCoordDto } from '../models/hex-coord-dto';
 export interface StellarObject {
+  orbitAnchor?: HexCoordDto;
   resources?: ({
 'energy'?: number;
 'minerals'?: number;
@@ -11,4 +13,5 @@ export interface StellarObject {
   size: number;
   subtype?: string | null;
   type: string;
+  velocity?: HexCoordDto;
 }
